--- a/locales/pl.json
+++ b/locales/pl.json
@@ -1,6 +1,6 @@
 {
-  "welcome_message": "Witaj w Time For Event!",
-  "description": "Twoje miejsce na niesamowite wydarzenia.",
+  "main_message": "Twoje Wydarzenie Starts Here",
+  "secondary_message": "Uczyń je niezapomnianym",
   "about": "Kim Jesteśmy",
   "offer": "Oferta",
   "blog": "Blog",
