add Offer section

--- a/locales/pl.json
+++ b/locales/pl.json
@@ -16,5 +16,8 @@
   "offer_3_title": "Oświetlenie",
   "offer_3_text": "Efektowne oświetlenie, które nada Twojemu wydarzeniu wyjątkowy klimat.",
   "offer_4_title": "Animacje i Zabawy",
-  "offer_4_text": "Atrakcje, które zintegrują i rozkręcą każdą imprezę."
+  "offer_4_text": "Atrakcje, które zintegrują i rozkręcą każdą imprezę.",
+
+  "sounds_header": "System dźwiękowy",
+  "sounds_info": "Profesjonalne audio oraz efekty wizualne dostosowane do twoich potrzeb."
 }
