--- a/locales/en.json
+++ b/locales/en.json
@@ -16,5 +16,8 @@
   "offer_3_title": "Lighting",
   "offer_3_text": "Spectacular lighting to create a unique atmosphere.",
   "offer_4_title": "Animations & Games",
-  "offer_4_text": "Engaging activities to bring energy and fun to any party."
+  "offer_4_text": "Engaging activities to bring energy and fun to any party.",
+
+  "sounds_header": "Sound System",
+  "sounds_info": "Professional audio equipment ensuring crystal clear sound quality for your event."
 }
