--- a/locales/en.json
+++ b/locales/en.json
@@ -19,5 +19,15 @@
   "offer_4_text": "Engaging activities to bring energy and fun to any party.",
 
   "sounds_header": "Sound System",
-  "sounds_info": "Professional audio equipment ensuring crystal clear sound quality for your event."
+  "sounds_info": "Professional audio equipment ensuring crystal clear sound quality for your event.",
+
+  "footer_description": "Professional DJ services for weddings, parties and corporate events",
+  "footer_contact_header": "Contact Us",
+  "footer_phone": "+48 123 456 789",
+  "footer_email": "contact@djservice.com",
+  "footer_social_header": "Follow Us",
+  "footer_copyright": "DJ Service. All rights reserved.",
+  "footer_legal_privacy": "Privacy Policy",
+  "footer_legal_terms": "Terms of Service",
+  "footer_legal_cookies": "Cookies Policy"
 }
