--- a/locales/pl.json
+++ b/locales/pl.json
@@ -19,5 +19,15 @@
   "offer_4_text": "Atrakcje, które zintegrują i rozkręcą każdą imprezę.",
 
   "sounds_header": "System dźwiękowy",
-  "sounds_info": "Profesjonalne audio oraz efekty wizualne dostosowane do twoich potrzeb."
+  "sounds_info": "Profesjonalne audio oraz efekty wizualne dostosowane do twoich potrzeb.",
+
+  "footer_description": "Profesjonalne usługi DJ-a na wesela, imprezy i eventy firmowe",
+  "footer_contact_header": "Kontakt",
+  "footer_phone": "+48 123 456 789",
+  "footer_email": "kontakt@djservice.pl",
+  "footer_social_header": "Obserwuj nas",
+  "footer_copyright": "DJ Service. Wszystkie prawa zastrzeżone.",
+  "footer_legal_privacy": "Polityka prywatności",
+  "footer_legal_terms": "Regulamin",
+  "footer_legal_cookies": "Polityka cookies"
 }
