--- a/locales/pl.json
+++ b/locales/pl.json
@@ -5,21 +5,21 @@
   "offer": "Oferta",
   "blog": "Blog",
   "contact": "Kontakt",
-  "about_me_header": "Kim jestem?",
-  "about_me_text": "Jestem DJ-em z wieloletnim doświadczeniem. Zagrałem na setkach wesel, eventów i imprez, sprawiając, że każda z nich była wyjątkowa.",
-  
-  "offer_introduce": "Lorem ipsum TEst Polski Język jestem DJ gram śpiewam mam dla was ofertę będzie dobra polecam się na przyszłość",
-  "offer_1_title": "Oprawa Muzyczna",
-  "offer_1_text": "Zadbam o najlepszą muzykę na Twoim wydarzeniu.",
+  "about_me_header": "Kim jesteśmy?",
+  "about_me_text": "Naszą pasją jest tworzenie niezapomnianych eventów. Zajmujmy się kompleksową obsługą każdego rodzaju wydarzenia. Dzięki kreatywnemu podejściu nasze eventy są wyjątkowe. Jeśli szukasz partnera, który wesprze Cię w organizacji ważnego wydarzenia, dopracowując go w każdym detalu to trafiłeś idealnie.",
+  "about_me_text2":"Oferujemy gamę usług; od pomysłu, przez logistykę po promocje i produkcje. Nasz zespół to profesjonalni oraz doświadczeni pasjonaci gotowi dostosować się do Twoich potrzeb. Współpracując z klientem stawiamy na: jakość, kreatywność oraz oryginalność!",
+  "offer_introduce": "Oferujemy kompleksową lub częściową obsługę techniczną imprez. Specjalizujemy się w obsłudze eventów korporacyjnych; wydarzenie biznesowe, eventy kulturalne, eventy sportowe, konferencje, seminaria, spotkania firmowe.",
+  "offer_1_title": "Scena",
+  "offer_1_text": "Scena to kluczowy element każdego wydarzenia. Rozumiemy wymagania i unikalność potrzeb dlatego proponujemy sprawdzone rozwiązania. Zapewniamy wszechstronność i elastyczność w obsłudze klientów.",
   "offer_2_title": "Nagłośnienie",
-  "offer_2_text": "Profesjonalne nagłośnienie zapewniające krystalicznie czysty dźwięk.",
+  "offer_2_text": "Oferujemy usługi dźwiękowe na najwyższym poziomie. Nasza firma specjalizuje się w profesjonalnym nagłaśnianiu imprez, koncertów, eventów firmowych oraz innych wydarzeń. Dźwięk odgrywa istotną rolę dlatego w swojej pracy wykorzystujemy profesjonalne urządzenia z najwyższej półki. Nasi specjaliści poprzez swoje umiejętności zapewnią niezapomniane wrażenia uczestnikom Twojego wydarzenia.",
   "offer_3_title": "Oświetlenie",
-  "offer_3_text": "Efektowne oświetlenie, które nada Twojemu wydarzeniu wyjątkowy klimat.",
-  "offer_4_title": "Animacje i Zabawy",
-  "offer_4_text": "Atrakcje, które zintegrują i rozkręcą każdą imprezę.",
+  "offer_3_text": "Nasza firma jest ekspertem w dziedzinie oświetlenia. Mamy świadomość potrzeb i wymagań dlatego współpraca z najlepszymi w tej dziedzinie pozwala nam tworzyć unikalne i niezapomniane wydarzenia. Niezależnie od tego czy organizujesz event, konferencje, koncert czy imprezę weselną, nasza firma zapewni niespotykane dotąd rozwiązania oświetleniowe, który na długo zapadną w pamięci.",
+  "offer_4_title": "DJ oraz instrumentaliści",
+  "offer_4_text": "Proponujemy najwyższej klasy doświadczenia muzyczne i artystyczne, które zapewnić może profesjonalny DJ lub zespół. Oprawa artystyczna nie musi zamykać się tylko na muzyce. Nasi instrumentaliści i artyści to doświadczenie, charyzma, klasa, kreatywność, pozytywność oraz odrobina humoru. Proponujemy szeroki wachlarz artystyczny mając na uwadze stworzenie czegoś wyjątkowego i unikalnego.",
 
-  "sounds_header": "System dźwiękowy",
-  "sounds_info": "Profesjonalne audio oraz efekty wizualne dostosowane do twoich potrzeb.",
+  "sounds_header": "Oswietlenie",
+  "sounds_info": "Współpracując z polską firmą Portman Lights (tu by można dać aktywne podświetlenie tak by kliknięcie przekierowało ich na stronę portman lights) oferujemy niespotykaną jakość i efekty wizualne. Oświetlenie odgrywa kluczową rolę w tworzeniu atmosfery i wrażeń podczas każdego wydarzenia. Stawiamy ogromny nacisk na kwestie oświetleniowe chcąc wyróżnić Twoje wydarzenie spośród innych. Życie jest za krótkie na nudne oświetlenie!",
 
   "footer_description": "Profesjonalne usługi DJ-a na wesela, imprezy i eventy firmowe",
   "footer_contact_header": "Kontakt",
@@ -41,5 +41,21 @@
   "emailEmail": "Twój Email",
   "emailText": "Twoja Wiadomość (Data wydarzenia, typ oraz specjalne życzenia)",
   "emailSend": "Wyślij Wiadomość",
-  "emailSending": "Wysyłanie..."
+  "emailSending": "Wysyłanie...",
+
+  "privacy_policy_title": "Polityka Prywatności",
+  "privacy_policy_data_controller": "Administrator Danych",
+  "privacy_policy_contact_form": "Przetwarzanie danych w formularzu kontaktowym",
+  "privacy_policy_contact_form_description": "Podczas korzystania z formularza kontaktowego zbieramy Twoje imię i nazwisko oraz adres e-mail w celu udzielenia odpowiedzi na zapytanie. Podanie tych danych jest dobrowolne, ale niezbędne do udzielenia odpowiedzi.",
+  "privacy_policy_data_purpose": "Cel przetwarzania danych",
+  "privacy_policy_data_purpose_content": "Twoje dane osobowe podane w formularzu kontaktowym będą przetwarzane wyłącznie w celu udzielenia odpowiedzi na zapytanie oraz ewentualnej przyszłej komunikacji związanej z pierwotną wiadomością.",
+  "privacy_policy_data_retention": "Okres przechowywania danych",
+  "privacy_policy_data_retention_content": "Będziemy przechowywać Twoje dane osobowe przez okres niezbędny do obsługi zapytania oraz maksymalnie przez 12 miesięcy po tym okresie w celach archiwalnych, chyba że zażądasz wcześniejszego usunięcia.",
+  "privacy_policy_rights": "Twoje prawa",
+  "privacy_policy_rights_content": "Masz prawo dostępu do swoich danych, ich sprostowania, usunięcia lub ograniczenia przetwarzania. Możesz także wnieść sprzeciw wobec przetwarzania danych. Aby skorzystać z tych praw, skontaktuj się z nami za pomocą podanych powyżej danych.",
+  "privacy_policy_security": "Bezpieczeństwo danych",
+  "privacy_policy_security_content": "Wdrażamy odpowiednie środki techniczne i organizacyjne zapewniające bezpieczeństwo Twoich danych osobowych, w tym ochronę przed nieuprawnionym dostępem i przypadkową utratą.",
+  "privacy_policy_changes": "Zmiany w polityce prywatności",
+  "privacy_policy_changes_content": "Zastrzegamy sobie prawo do modyfikacji tej polityki prywatności. Wszelkie zmiany będą publikowane na tej stronie.",
+  "privacy_policy_effective_date": "Data obowiązywania: 5 czerwca 2023"
 }
