--- a/locales/en.json
+++ b/locales/en.json
@@ -1,52 +1,52 @@
 {
   "main_message": "Your Event Starts Here",
-  "secondary_message": "Make it unforgettable",
-  "about": "Who We Are",
-  "offer": "Offer",
+  "secondary_message": "Make It Unforgettable",
+  "about": "About Us",
+  "offer": "Services",
   "blog": "Blog",
   "contact": "Contact",
-  "about_me_header": "Who am I?",
-  "about_me_text": "I am a DJ with years of experience. I have played at hundreds of weddings, events, and parties, making each one unique.",
-  
-  "offer_introduce": "All bookings include a complimentary pre-event consultation to discuss your music preferences, special requests, and event timeline. Additional services like photo booths, custom lighting designs, and MC services are available upon request",
-  "offer_1_title": "Music Setup",
-  "offer_1_text": "I will provide the best music for your event.",
+  "about_me_header": "Who We Are?",
+  "about_me_text": "Our passion is creating unforgettable events. We specialize in comprehensive service for every type of event. Thanks to our creative approach, our events are unique. If you're looking for a partner to support you in organizing an important event, perfecting every detail, you've come to the right place.",
+  "about_me_text2": "We offer a range of services; from concept through logistics to promotion and production. Our team consists of professional and experienced enthusiasts ready to adapt to your needs. When working with clients, we focus on: quality, creativity and originality!",
+  "offer_introduce": "We offer comprehensive or partial technical service for events. We specialize in corporate events; business events, cultural events, sports events, conferences, seminars, company meetings.",
+  "offer_1_title": "Stage",
+  "offer_1_text": "The stage is a key element of every event. We understand the requirements and uniqueness of needs, which is why we offer proven solutions. We provide versatility and flexibility in customer service.",
   "offer_2_title": "Sound System",
-  "offer_2_text": "Professional sound system ensuring crystal-clear audio.",
+  "offer_2_text": "We offer top-quality sound services. Our company specializes in professional sound systems for parties, concerts, corporate events and other occasions. Sound plays a crucial role, which is why we use professional top-tier equipment. Our specialists will ensure unforgettable experiences for your event participants through their skills.",
   "offer_3_title": "Lighting",
-  "offer_3_text": "Spectacular lighting to create a unique atmosphere.",
-  "offer_4_title": "Animations & Games",
-  "offer_4_text": "Engaging activities to bring energy and fun to any party.",
+  "offer_3_text": "Our company is an expert in lighting. We're aware of needs and requirements, so cooperation with the best in the field allows us to create unique and memorable events. Whether you're organizing an event, conference, concert or wedding, our company will provide unprecedented lighting solutions that will be remembered for long.",
+  "offer_4_title": "DJ and Instrumentalists",
+  "offer_4_text": "We offer top-class musical and artistic experiences that only a professional DJ or band can provide. Artistic setting doesn't have to be limited to music. Our instrumentalists and artists represent experience, charisma, class, creativity, positivity and a touch of humor. We offer a wide artistic range with the aim of creating something exceptional and unique.",
 
-  "sounds_header": "Sound System",
-  "sounds_info": "Professional audio equipment ensuring crystal clear sound quality for your event.",
+  "sounds_header": "Lighting",
+  "sounds_info": "Cooperating with the Polish company Portman Lights (active highlighting could be added here so clicking redirects to Portman Lights website) we offer unmatched quality and visual effects. Lighting plays a key role in creating atmosphere and experiences during every event. We place huge emphasis on lighting aspects wanting to make your event stand out from others. Life is too short for boring lighting!",
 
   "footer_description": "Professional DJ services for weddings, parties and corporate events",
-  "footer_contact_header": "Contact Us",
+  "footer_contact_header": "Contact",
   "footer_phone": "+48 123 456 789",
-  "footer_email": "contact@djservice.com",
+  "footer_email": "contact@djservice.pl",
   "footer_social_header": "Follow Us",
   "footer_copyright": "DJ Service. All rights reserved.",
   "footer_legal_privacy": "Privacy Policy",
   "footer_legal_terms": "Terms of Service",
   "footer_legal_cookies": "Cookies Policy",
 
-  "emailHeader": "Get In Touch",
-  "emailInfo": "Have questions or want to book our services? Send us a message and we'll respond within 24 hours.",
-  "emailStep0": "Simple Booking Process",
+  "emailHeader": "Contact Us",
+  "emailInfo": "Have questions or want to book our services? Send a message and we'll respond within 24 hours.",
+  "emailStep0": "Booking Process",
   "emailStep1": "Fill out the contact form",
   "emailStep2": "We'll confirm availability and details",
-  "emailSentMail": "Thank you! Your message has been sent successfully.",
+  "emailSentMail": "Thank you! Your message has been sent.",
   "emailName": "Your Name",
   "emailEmail": "Your Email",
-  "emailText": "Your Message (Event date, type, and any special requests)",
+  "emailText": "Your Message (Event date, type and special requests)",
   "emailSend": "Send Message",
   "emailSending": "Sending...",
 
   "privacy_policy_title": "Privacy Policy",
   "privacy_policy_data_controller": "Data Controller",
   "privacy_policy_contact_form": "Contact Form Data Processing",
-  "privacy_policy_contact_form_description": "When you use our contact form, we collect your name and email address to respond to your inquiry. Providing this data is voluntary but necessary to respond to your message.",
+  "privacy_policy_contact_form_description": "When you use our contact form, we collect your name and email address to respond to your inquiry. Providing this data is voluntary but necessary to respond.",
   "privacy_policy_data_purpose": "Purpose of Data Processing",
   "privacy_policy_data_purpose_content": "Your personal data provided through the contact form will be processed solely for the purpose of responding to your inquiry and for possible future communication related to your initial message.",
   "privacy_policy_data_retention": "Data Retention Period",
@@ -57,5 +57,32 @@
   "privacy_policy_security_content": "We implement appropriate technical and organizational measures to ensure the security of your personal data, including protection against unauthorized access and accidental loss.",
   "privacy_policy_changes": "Changes to Privacy Policy",
   "privacy_policy_changes_content": "We reserve the right to modify this privacy policy. Any changes will be published on this page.",
-  "privacy_policy_effective_date": "Effective date: June 5, 2023"
+  "privacy_policy_effective_date": "Effective date: June 5, 2023",
+
+  "cookies_what_are_content": "Cookies are small text files stored on your device when you visit websites. They help the site function properly and provide information about user behavior.",
+  "cookies_how_use": "How we use cookies",
+  "cookies_how_use_content": "We use cookies to ensure proper website functionality, analyze traffic and personalize content. Some cookies are essential and cannot be turned off.",
+  "cookies_types": "Types of cookies we use",
+  "cookies_essential": "Essential cookies",
+  "cookies_essential_desc": "Required for basic website functionality. Without these, our website would not work properly.",
+  "cookies_performance": "Performance cookies",
+  "cookies_performance_desc": "Help us understand how visitors interact with our website by collecting anonymous information.",
+  "cookies_functional": "Functional cookies",
+  "cookies_functional_desc": "Remember your preferences and settings to provide enhanced features.",
+  "cookies_marketing": "Marketing cookies",
+  "cookies_marketing_desc": "Used to track visitors across websites to display relevant ads.",
+  "cookies_control": "Controlling cookies",
+  "cookies_control_content": "You can manage cookie preferences in your browser settings. Note that disabling some cookies may affect website functionality.",
+  "cookies_changes": "Changes to this policy",
+  "cookies_changes_content": "We may update this Cookie Policy. Any changes will be posted on this page.",
+  "cookies_effective_date": "Effective date: June 5, 2023",
+
+  "cookies_banner_message": "We use cookies to enhance your experience. By clicking 'Accept All', you consent to all cookies.",
+  "cookies_preferences_title": "Cookie Preferences",
+  "cookies_preferences_description": "Manage your cookie settings. Essential cookies cannot be disabled as they are necessary for basic functionality.",
+  "cookies_accept_all": "Accept All",
+  "cookies_reject_all": "Reject All",
+  "cookies_save_prefs": "Save Preferences",
+  "cookies_customize": "Customize",
+  "cookies_always_on": "Always On"
 }
