--- a/locales/en.json
+++ b/locales/en.json
@@ -23,8 +23,8 @@
 
   "footer_description": "Professional DJ services for weddings, parties and corporate events",
   "footer_contact_header": "Contact",
-  "footer_phone": "+48 123 456 789",
-  "footer_email": "contact@djservice.pl",
+  "footer_phone": "+48 784 625 156",
+  "footer_email": "timeforevent.pl@gmail.com",
   "footer_social_header": "Follow Us",
   "footer_copyright": "DJ Service. All rights reserved.",
   "footer_legal_privacy": "Privacy Policy",
