--- a/locales/pl.json
+++ b/locales/pl.json
@@ -23,8 +23,8 @@
 
   "footer_description": "Profesjonalne usługi DJ-a na wesela, imprezy i eventy firmowe",
   "footer_contact_header": "Kontakt",
-  "footer_phone": "+48 123 456 789",
-  "footer_email": "kontakt@djservice.pl",
+  "footer_phone": "+48 784 625 156",
+  "footer_email": "timeforevent.pl@gmail.com",
   "footer_social_header": "Obserwuj nas",
   "footer_copyright": "DJ Service. Wszystkie prawa zastrzeżone.",
   "footer_legal_privacy": "Polityka prywatności",
